<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.zybooks.gkproj3.HomeFragment"
        android:label="@string/home_screen"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/navigation_seaweed_salad"
        android:name="com.zybooks.gkproj3.SeaweedSaladFragment"
        android:label="@string/special1"
        tools:layout="@layout/fragment_seaweed_salad" />

    <fragment
        android:id="@+id/navigation_salmon_sushi"
        android:name="com.zybooks.gkproj3.SalmonSushiFragment"
        android:label="@string/special2"
        tools:layout="@layout/fragment_salmon_sushi" />

    <fragment
        android:id="@+id/navigation_mixed_sashimi"
        android:name="com.zybooks.gkproj3.MixedSashimiFragment"
        android:label="@string/special3"
        tools:layout="@layout/fragment_mixed_sashimi" />
</navigation>